Do not create native window handle just because a parent has one.

On X11 when creating a widget that has a parent, there is no reason to create a
native window handle right away since we don't know yet if the window is going
to be ever shown.

Task-number: QTBUG-9215
Reviewed-by: Bradley T. Hughes
(cherry picked from commit 1d506981bcc3d2b8aad67989fd7946a0ad826856)